# closedclaw

./: .gitignore  =23.1.0  cross_system_test.py  pyproject.toml  test_swarm.py
closedclaw-master/src/closedclaw/: biome.json  pyproject.toml  vitest.config.ts
closedclaw-master/src/closedclaw/api/: __init__.py  app.py  cli.py  deps.py
closedclaw-master/src/closedclaw/api/agents/: tools.py
closedclaw-master/src/closedclaw/api/agents/swarm/: __init__.py  accessor.py  addon_memory.py  arbitrator.py  auditor.py  base.py  bus.py  constitution.py  coordinator.py  crypto.py  governance.py  injector.py  maker.py  memory_guardian.py  models.py  policy.py  processor.py  sentinel.py  tools.py
closedclaw-master/src/closedclaw/api/core/: addon_auth.py  config.py  crypto.py  insights.py  local.py  memory.py  storage.py  termination_lock.py
closedclaw-master/src/closedclaw/api/models/: audit.py  memory.py
closedclaw-master/src/closedclaw/api/privacy/: detector.py  firewall.py  ollama_redactor.py  redactor.py
closedclaw-master/src/closedclaw/api/privacy/tests/: test_privacy.py
closedclaw-master/src/closedclaw/api/routes/: addon.py  audit.py  bridge.py  clawdbot.py  config_routes.py  consent.py  health.py  mcp.py  memory.py  memory_chat.py  policies.py  proxy.py  swarm.py
closedclaw-master/src/closedclaw/api/vector_stores/: __init__.py  mem0_adapter.py
closedclaw-master/src/closedclaw/crypto/: types.ts
closedclaw-master/src/closedclaw/extension/: build.mjs  manifest.json  package.json  tsconfig.json
closedclaw-master/src/closedclaw/extension/background/: crypto.ts  handshake.ts  service_worker.ts
closedclaw-master/src/closedclaw/extension/content_scripts/: consent_ui.ts  injector.ts  interceptor.ts
closedclaw-master/src/closedclaw/extension/content_scripts/sites/: chatgpt.ts  claude.ts  gemini.ts  generic.ts
closedclaw-master/src/closedclaw/extension/popup/: popup.html  popup.ts
closedclaw-master/src/closedclaw/lib/: biome.json
closedclaw-master/src/closedclaw/lib/src/: index.ts
closedclaw-master/src/closedclaw/lib/src/consent/: index.ts  types.ts
closedclaw-master/src/closedclaw/lib/src/crypto/: argon2.ts  ed25519.ts
closedclaw-master/src/closedclaw/lib/src/vault/: vault.ts
closedclaw-master/src/closedclaw/lib/tests/: crypto.test.ts
closedclaw-master/src/closedclaw/src/: index.ts
closedclaw-master/src/closedclaw/src/consent/: receipts.ts
closedclaw-master/src/closedclaw/src/crypto/: types.ts
closedclaw-master/src/closedclaw/src/vault/: vault.ts
closedclaw-master/src/closedclaw/tests/: consent.test.ts  vault.test.ts
closedclaw-master/src/closedclaw/ui/: .gitignore  next.config.js  package.json  tailwind.config.js
closedclaw-master/src/closedclaw/ui/app/: error.tsx  globals.css  loading.tsx
closedclaw-master/src/closedclaw/ui/app/agent/: page.tsx
closedclaw-master/src/closedclaw/ui/app/apps/: page.tsx
closedclaw-master/src/closedclaw/ui/app/chat/: page.tsx
closedclaw-master/src/closedclaw/ui/app/graph/: page.tsx
closedclaw-master/src/closedclaw/ui/app/memories/: page.tsx
closedclaw-master/src/closedclaw/ui/app/policies/: page.tsx
closedclaw-master/src/closedclaw/ui/app/settings/: page.tsx
closedclaw-master/src/closedclaw/ui/app/swarm/: page.tsx
closedclaw-master/src/closedclaw/ui/components/chat/: agent-message.tsx  chat-input.tsx  chat-orb.tsx  chat-sidebar.tsx  index.ts  thinking-steps.tsx  use-chat-with-mem0.ts  user-message.tsx
closedclaw-master/src/closedclaw/ui/components/consent/: consent-center.tsx
closedclaw-master/src/closedclaw/ui/components/graph/: constants.ts  graph-canvas.tsx  index.ts  legend.tsx  memory-graph.tsx  (+6 more)
closedclaw-master/src/closedclaw/ui/lib/: utils.ts
(+189 files in other folders)
