[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "closedclaw"
version = "0.1.0"
description = "Privacy-first AI memory middleware - Your Memory, Your Rules, Your Machine"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "anyio>=4.2.0",
    "cryptography>=42.0.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
mem0 = ["mem0ai>=1.0.0"]
nlp = [
    "spacy>=3.7.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]
all = ["closedclaw[mem0,nlp]"]

[project.scripts]
closedclaw = "closedclaw.api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["closedclaw-master/src/closedclaw"]

[tool.hatch.build]
sources = ["closedclaw-master/src"]
