[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "closedclaw"
version = "0.1.0"
description = "Privacy-first AI memory middleware - Your Memory, Your Rules, Your Machine"
authors = [
    { name = "Closedclaw Team" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["ai", "memory", "privacy", "llm", "openai", "mem0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # HTTP client
    "httpx>=0.26.0",
    
    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    
    # Async
    "anyio>=4.2.0",
    
    # Cryptography
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    
    # Vector operations
    "numpy>=1.24.0",
    
    # mem0 (optional - for full memory features)
    # "mem0ai>=0.1.0",
]

[project.optional-dependencies]
mem0 = [
    "mem0ai>=1.0.0",
]
llm = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "ollama>=0.1.0",
    "litellm>=1.30.0",
]
local = [
    # Minimal dependencies for fully local operation
    "ollama>=0.1.0",
    "mem0ai>=1.0.0",
]
nlp = [
    "spacy>=3.7.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
all = [
    "closedclaw[mem0,llm,nlp,dev]",
]

[project.scripts]
closedclaw = "closedclaw.api.cli:main"

[project.urls]
Homepage = "https://github.com/closedclaw/closedclaw"
Documentation = "https://closedclaw.dev/docs"
Repository = "https://github.com/closedclaw/closedclaw"

[tool.hatch.build.targets.wheel]
packages = ["closedclaw"]

[tool.hatch.build.targets.sdist]
include = [
    ".",
    "/README.md",
]

[tool.hatch.build]
sources = [".."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
